--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
   position:absolute;
   left:50%;
   top:50%;
-  transform:translate(-50%, -150%);
+  transform:translate(-50%, -80%);
 }
 
 body{
@@ -22,6 +22,10 @@ body{
 
 h1{
   font-size: 50px;
+}
+
+p{
+  font-size: 40px;
 }
 
 button {
